# agrf

./: .flake8  .gitignore  Makefile  README.md  build.py  install-go-dependencies.sh  pyproject.toml
.github/workflows/: build.yml  copilot-setup-steps.yml  sphinx-gh-pages.yml  unit-tests.yml
agrf/: strings_test.py
agrf/global_cache/: digest.py  foundation_sprite.py  pool.py  switch.py
agrf/gorender/: __init__.py
agrf/graphics/: __init__.py  layered_image.py  layered_image_test.py  misc.py  rotator.py  rotator_test.py  spritesheet.py  voxel.py  voxel_test.py
agrf/graphics/cv/: foundation.py  foundation_test.py  nightmask.py
agrf/graphics/helpers/: blend.py  foundation.py  map.py
agrf/graphics/sprites/: blend.py  foundation.py  map.py  night.py
agrf/lib/: bridge.py  cargo.py
agrf/lib/building/: baseset_layouts.py  baseset_sprites.py  default.py  demo.py  foundation.py  image_sprite.py  layout.py  layout_test.py  registers.py  roadstop.py  slope.py  slope_test.py  station.py  station_tile_switch.py  station_tile_switch_test.py  symmetry.py  symmetry_test.py
agrf/localization/: traditional_chinese.py
agrf/localization/opencc_config/: s2t.json  s2t.txt  tw.txt
agrf/magic/: __init__.py  hash.py  switch.py
agrf/measurements/: length.py
agrf/parameters/: __init__.py  parameters.py  parameters_test.py
agrf/pkg/: font_test.py
agrf/sprites/: empty.py  numbered.py
agrf/strings/: __init__.py
doc/: manifest_json.md
docs/: Makefile  conf.py  generate_previews.py  index.md  previews.md
tools/: docgen.py  extract_4x_sprites.py  install-deps.py  update-images.py
