[project]
name = "agrf"
version = "0.0.1"
authors = [
    { name="Yi Yang", email="ahyangyi@gmail.com" },
]
description = "Ahyangyi's OpenTTD NewGRF Toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Go",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "grf @ git+https://github.com/ahyangyi/grf-py@1c956d6",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]

lint = [
    "black",
]

dev = [
    "agrf[test,lint]",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
skip_magic_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agrf" },
]
exclude = ["*_test.py"]
include = [
    { path = "*.json", format = ["sdist", "wheel"] },
    { path = "*.otf", format = ["sdist", "wheel"] },
    { path = "*.png", format = ["sdist", "wheel"] },
    { path = "agrf/gorender/bin/*", format = ["sdist", "wheel"] },
]
