[project]
name = "agrf"
version = "0.0.1"
authors = [
    { name="Yi Yang", email="ahyangyi@gmail.com" },
]
description = "Ahyangyi's OpenTTD NewGRF Toolkit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Go",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "grf @ git+https://github.com/ahyangyi/grf-py@c11c17eb",
  "dataclass-type-validator>=0.1.2",
]
license = "GPL-2.0-or-later"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
]

doc = [
    "sphinx",
    "furo",
    "myst_parser",
]

lint = [
    "black",
]

dev = [
    "agrf[test,lint,doc]",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
skip_magic_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
addopts = "--cov=agrf --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agrf" },
]
exclude = ["*_test.py"]
include = [
    { path = "*.json", format = ["sdist", "wheel"] },
    { path = "*.otf", format = ["sdist", "wheel"] },
    { path = "*.png", format = ["sdist", "wheel"] },
    { path = "agrf/gorender/bin/*", format = ["sdist", "wheel"] },
]

[tool.poetry.build]
script = "tools/install-deps.py"
